--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
-    "clsx": "^1.1.0",
-    "@electron/remote": "^2.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +15,7 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "clsx": "^1.1.0",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "electron": "^21.2.0",
@@ -58,6 +58,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.1"
   }
 }
