--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
-    "@electron/remote": "^2.0.8",
+    "@electron/remote": "^0.0.1",
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,11 +19,12 @@
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "electron": "^21.2.0",
+    "firebase": "^9.13.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.4",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
