--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "cep-promise": "^4.3.0",
     "clsx": "^1.1.0",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
