--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.10",
     "typescript": "^4.8.4",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
