--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "electron": "^21.2.0",
+    "electron-builder": "^23.6.0",
+    "electron-is-dev": "^2.0.0",
     "firebase": "^9.13.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -37,8 +39,22 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-    "electron:build": "",
-    "electron:start": "wait-on tcp:3000 && electron ."
+    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron:start": "wait-on tcp:3000 && electron .",
+    "electron:exe": "npm run electron:build && npx eletron-packager ./ sistema-integrado --platform=win32 --arch=x64"
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.example.eletron-cra",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +76,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "electron-packager": "^17.1.1",
     "postcss": "^8.4.18",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.1"
